# valores-iniciais

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  libvi.cmake  repos.cmake
f2py/: CMakeLists.txt  valores_iniciais.f90
include/: tipos.F90
src/: aleatorio.f90  condicionamento.f90  condicoes_iniciais.f90  sorteio.f90
